--- a/thesis_luab558.client/src/index.html
+++ b/thesis_luab558.client/src/index.html
@@ -15,6 +15,8 @@
         crossorigin="anonymous">
 </head>
 <body>
-  <app-root></app-root>
+  <div class='container'>
+    <app-root></app-root>
+  </div>
 </body>
 </html>
